--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,11 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
-    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
-    "nodemon": "^3.1.10",
-    "puppeteer": "^24.12.1"
+    "nodemon": "^3.1.10"
   }
 }
